# code-scanning-ai-hackathon

./: .env.tmp  .gitignore  README.md  pyproject.toml  run.sh  rxconfig.py  startup.sh
.web/: package.json  reflex.json
challenges/: README.md
challenges/Challenge1/: README.md
challenges/Challenge2/: README.md
challenges/Challenge3/: README.md
challenges/Challenge4/: README.md
challenges/resources/codeql_scans/: README.md
hackathon/src/: run.py
hackathon/src/backend/: main.py
hackathon/src/frontend/: app.py  rxconfig.py
hackathon/src/frontend/.web/: reflex.install_frontend_packages.cached
hackathon/src/frontend/app/: app.py  main.py  reflextest.py  style.css
hackathon/src/frontend/reflextest/: reflextest.py
hackathon/src/frontend/templates/: commit_details.html  index.html
hackathon/src/github/: api.py
hackathon/src/llm/: enums.py  prompt.py  wrapper.py
hackathon/src/parser/: sarif.py
pages/: 404.html  index.html  sitemap-0.xml
pages/5a7786812dd4/: index.html
pages/_next/static/BWBGFokGumQGabDrcoWpw/: _buildManifest.js
pages/a632c89dd778/: index.html
pages/b8b8ebcf851d/: index.html
pages/d25dd807485c/: index.html
pages/da5091bf507b/: index.html
ryotest/: commitstringexample.txt  test.py
ui_nathan/: example.py  row.html  style.css
ui_nathan/reflextest/: gitlog.py  style.py
ui_nathan/reflextest/.web/: bun.lockb  package.json  reflex.install_frontend_packages.cached  reflex.json
ui_nathan/reflextest/reflextest/: diff.html  reflextest.py  tet.py
ui_nathan/reflextest/static/: index.html  sitemap-0.xml
(+41 files in other folders)
